Modify PlayersUI to better match expectations